# linux_devcontainer

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  main.cpp
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  fbisd-pa-trust.crt  gzrun.sh
.devcontainer/linux-ssh/: devcontainer.json
Chapter01/: CMakeLists.txt  Main  Main.cc  ch01_basics.cpp  ch01_camera.cpp  ch01_eigen.cpp  ch01_torch.cpp
Chapter01/Lib/: shared.cpp  shared.h  unique.h
Chapter01/Lib/memory/: ScopeTest.cpp  shared.cpp  unique.cpp
Chapter01/cmake/: Chapter01Config.cmake.in
Chapter01/include/Chapter01/: demos.h
Chapter01/src/: demos.cpp
Chapter01/src/basics/: lib.cpp
Chapter01/src/memory/: ScopeTest.h  shared.h
ros2_ws/src/fws_robot_sim/: package.xml
ros2_ws/src/fws_robot_sim/launch/: fws_robot_spawn.launch.py
ros2_ws/src/my_cpp_pkg/: package.xml
